# chess

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: FindPCRE2.cmake
src/: array.c  array.h  board.c  board.h  cache.c  cache.h  common.h  evaluation.c  evaluation.h  main.c  main.cpp  main_uci.c  move.c  move.h  perft.c  perft.h  pgn.c  pgn.h  piece.c  piece.h  zobrist.c  zobrist.h
test/: CMakeLists.txt  main.c
